feat: add event chat
